14. Архивировать проект [#861]